Properly link style sheet, initial content for Homepage.

--- a/Test_HTML_Main.html
+++ b/Test_HTML_Main.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>title</title>
+	<link rel="stylesheet" href="Source.css">
+	<title>Nicolas Soto - Technical Writer Portfolio</title>
 </head>
 <body>
+    <div class="Homepage_Title">
+        <h1>Nicolas Soto - Aspiring Technical Writer</h1>
+    </div>
+    <div class="Homepage_Content">
+        <div class="Pond_Game">
+            <div class="Thin_Spacer">
+            </div>
+            <div class="Project_Pond">
+            </div>
+        </div>
+
+        <div class="Main_Info">
+            <p>Test Main_Info</p>
+        </div>
+
+    </div>
     
 </body>
 </html>
