--- a/Test_HTML_Main.html
+++ b/Test_HTML_Main.html
@@ -10,14 +10,17 @@
     </div>
     <div class="Homepage_Content">
         <div class="Pond_Game">
-            <div class="Thin_Spacer">
-            </div>
+            <h2 class="Game_Name">Fishing for Projects</h2>
             <div class="Project_Pond">
             </div>
         </div>
 
         <div class="Main_Info">
-            <p>Test Main_Info</p>
+            <h2 class="Game_Name">Who am I?</h2>
+            <p class="Intro_Info">Howdy, I'm Nicolas Soto, a Technical Communication student at the University of North Texas, aiming to become a technical writer. I specialize in creating documentation that is both accurate and readable. The primary tenet of my writing is to close the gap of ambiguity between written words and their intended meaning. 
+            <br>
+            <br>A key area of my focus is the evolving role of new technologies, particularly how generative AI can be ethically and effectively utilized to enhance professional communication.<br>
+            <br>To see my skills in action, you can "fish up" my past projects with the interactive game to the left, or find them listed directly below.</p>
         </div>
 
     </div>
