Added project "fish" checkboxes.

--- a/Test_HTML_Main.html
+++ b/Test_HTML_Main.html
@@ -12,6 +12,12 @@
         <div class="Pond_Game">
             <h2 class="Game_Name">Fishing for Projects</h2>
             <div class="Project_Pond">
+                <div class="Project1_Fish">
+                <input type="checkbox" id="project1_checkbox" class="Project_Checkbox">
+                <label for="project1_checkbox" id="project1_visual">
+                    <img src="Page_Resources/Documents/Plain Language Analysis Report Thumbnail.png" class="Swimming_Project" alt="Thumbnail of Project 1">
+                </label>
+                </div>
             </div>
         </div>
 
@@ -22,8 +28,6 @@
             <br>A key area of my focus is the evolving role of new technologies, particularly how generative AI can be ethically and effectively utilized to enhance professional communication.<br>
             <br>To see my skills in action, you can "fish up" my past projects with the interactive game to the left, or find them listed directly below.</p>
         </div>
-
     </div>
-    
 </body>
 </html>
