file name conventions

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="Main_Info">
             <h2 class="Game_Name">Who am I?</h2>
-            <p class="Intro_Info">Howdy, I'm Nicolas Soto, a Technical Communication student at the University of North Texas, aiming to become a technical writer. I specialize in creating documentation that is both accurate and readable. The primary tenet of my writing is to close the gap of ambiguity between written words and their intended meaning. 
+            <p class="Intro_Info">Howdy! I'm Nicolas Soto, a Technical Communication student at the University of North Texas, aiming to become a technical writer. I specialize in creating documentation that is both accurate and readable. The primary tenet of my writing is to close the gap of ambiguity between written words and their intended meaning. 
             <br>
             <br>A key area of my focus is the evolving role of new technologies, particularly how generative AI can be ethically and effectively utilized to enhance professional communication.<br>
             <br>To see my skills in action, you can "fish up" my past projects with the interactive game to the left, or find them listed directly below.</p>
