Other name convention fixes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="Project1_Fish">
                 <input type="checkbox" id="project1_checkbox" class="Project_Checkbox">
                 <label for="project1_checkbox" id="project1_visual">
-                    <img src="Page_Resources/Documents/Plain Language Analysis Report Thumbnail.png" class="Swimming_Project" alt="Thumbnail of Project 1">
+                    <img src="page_resources/documents/plain_language_analysis_report_thumbnail.png" class="Swimming_Project" alt="Thumbnail of Project 1">
                 </label>
                 </div>
             </div>
